--- a/index.html
+++ b/index.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Lato:wght@300&display=swap" rel="stylesheet">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-   <div class="top_div">
-    <img class="img_goo" src="google_PNG19625.png" alt="image">
-    <input class="inputbox" type="text" placeholder="search..">
-</div>
-
-    <div class="btn-wrapper">
-    <button class="btn">Google Search</button>
-    <button class="btn">I'am feeling lucky</button>
-    </div>
-   <div>
-    <img src="" alt="">
-   </div>
-
-   <div class="japflg">
-    
-   </div>
+ <div id="header">
+    <H1 class="letters">Today is margo's Birthday</H1>
+    <div class="imgdiv"><img src="image\margo.jpg" alt="image " id="imgid"></div>
+    <h3 id="b-age">24 years old</h3>
+    <h4 id="b-date"> 01.11.2022</h4></div>
+ 
   
 </body>
 </html>
